--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,3 @@
-#Sun Oct 04 00:04:23 EDT 2009
+#Mon Nov 30 23:04:09 EST 2009
 eclipse.preferences.version=1
-encoding/<project>=utf-8
+encoding/<project>=UTF-8
